# ifc4d-gantt

./: .gitignore  GITHUB_ACTION_USAGE.md  README.md  pyproject.toml
src/ifc4d_gantt/: __init__.py  __main__.py
tests/: __init__.py  test_cli.py  test_generate_gantt.py
workflows/: generate-gantt-charts.yml
